--- a/styles/style.css
+++ b/styles/style.css
@@ -198,6 +198,30 @@ a {
     text-decoration: underline;
 }
 
+.study-img {
+    width: 50%;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    margin: 5% 0 5% 0;
+}
+
+.study-img img {
+    margin: 0 auto;
+    width: 70%;
+    float: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.study-img a {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
+.study-img a:hover {
+    opacity: 0.5;
+}
+
 ul {
     list-style-type: none;
 }
