--- a/styles/style.css
+++ b/styles/style.css
@@ -353,6 +353,7 @@ h3 {
 #aboutme {
     padding: 15% 0 3% 0;
     font-size: 24px;
+    text-align: center;
 }
 
 #bio-text {
@@ -371,6 +372,14 @@ h3 {
     width: 50%;
     box-shadow: 0 0 100px 0 #ffedd3 inset;
     margin: 0 auto;
+}
+
+.qualifications {
+    text-align: center;
+}
+
+.qualifications-bg {
+    height: 100vh;
 }
 
 .qualifications-bg, .studies-bg {
@@ -499,7 +508,7 @@ h3 {
 
 .qualifications-entry {
     position: relative;
-    padding: 3%;
+    padding: 1%;
     display: inline-block;
     width: 40%;
     height: 400px;
@@ -528,7 +537,7 @@ h3 {
 
 .studies-content {
     text-align: left;
-    margin: 20px 5% 20px 5%;
+    margin: 20px 7% 20px 7%;
 }
 
 .imgs {
