--- a/styles/style.css
+++ b/styles/style.css
@@ -376,10 +376,7 @@ h3 {
 
 .qualifications {
     text-align: center;
-}
-
-.qualifications-bg {
-    height: 100vh;
+    height: 100%;
 }
 
 .qualifications-bg, .studies-bg {
@@ -391,6 +388,10 @@ h3 {
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     margin-bottom: 50px;
+}
+
+.qualifications-bg {
+    padding-bottom: 3%;
 }
 
 #page2 {
@@ -473,10 +474,6 @@ h3 {
     font-weight: 500;
 }
 
-.qualifications-bg {
-    padding-bottom: 3%;
-}
-
 #qualification-title {
     margin-bottom: 1%
 }
@@ -508,10 +505,11 @@ h3 {
 
 .qualifications-entry {
     position: relative;
+    margin: 1%;
     padding: 1%;
     display: inline-block;
     width: 40%;
-    height: 400px;
+    height: 45%;
 }
 
 .studies-img {
